@@ -132,8 +132,8 @@ void set_globid(
   {
   extern char noglobid[];
 
-  if (pjob->ji_globid == NULL)
-    pjob->ji_globid = strdup(noglobid);
+  if (pjob->ji_globid[0] == '\0')
+    snprintf(pjob->ji_globid, sizeof(pjob->ji_globid), "%s", noglobid);
 
   return;
   }  /* END set_globid() */
